# todoblog

./: .env  .gitignore  pyproject.toml
src/: main.py  models.py  sandbox.py  shemas.py
src/core/database/: models.py  session.py
src/database/: posts.json  users.json
src/models/: category.py  default.py  post.py  user.py
src/routers/: posts.py  users.py
src/services/: services.py
