[tool.poetry]
name = "todoblog"
version = "0.1.0"
description = ""
authors = ["miwa"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
uvicorn = "^0.29.0"
SQLAlchemy = "^2.0.30"
alembic = "^1.13.1"
psycopg2-binary = "^2.9.9"
fastapi = "^0.115.0"
black = "^24.8.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
